[package]
name = "gc"
version = "0.2.1"
authors = ["Manish Goregaokar <manishsmail@gmail.com>", "Michael Layzell <michael@thelayzells.com>"]
description = "Tracing garbage collector plugin for Rust. Not ready for use yet, please see README"
repository = "https://github.com/Manishearth/rust-gc"
readme = "../README.md"
license = "MPL-2.0"
keywords = ["garbage", "plugin", "memory"]

[features]
nightly = []

[dev-dependencies]
gc_derive = { path = "../gc_derive", version = "0.2.1" }
