[package]
name = "gc"
version = "0.3.5"
authors = ["Manish Goregaokar <manishsmail@gmail.com>", "Nika Layzell <nika@thelayzells.com>"]
description = "Tracing garbage collector plugin for Rust. Not ready for use yet, please see README"
repository = "https://github.com/Manishearth/rust-gc"
readme = "../README.md"
license = "MPL-2.0"
keywords = ["garbage", "plugin", "memory"]
edition = "2018"

[features]
nightly = []
derive = ["gc_derive"]

[dependencies]
gc_derive = { path = "../gc_derive", version = "0.3", optional = true }

[dev-dependencies]
gc_derive = { path = "../gc_derive", version = "0.3" }
