[package]
name = "gc_derive"
version = "0.3.2"
authors = ["Manish Goregaokar <manishsmail@gmail.com>", "Michael Layzell <michael@thelayzells.com>"]

description = "Garbage collector derive plugin for rust-gc"
repository = "https://github.com/Manishearth/rust-gc"
readme = "../README.md"
license = "MPL-2.0"
keywords = ["garbage", "macro", "memory"]

[lib]
name = "gc_derive"
proc-macro = true

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
synstructure = "0.12"
